--- a/src/components/CountryCard/CountryCard.scss
+++ b/src/components/CountryCard/CountryCard.scss
@@ -12,6 +12,7 @@
 
     .image {
         max-height: 150px;
+        box-shadow: 1px 2px 2px 1px #d3d3d3;
 
         img {
             width: 100%;
