--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -2,5 +2,21 @@
 
     input {
         background: url(../../assets/search-icon.png);
+        background-repeat: no-repeat;
+        background-size: 20px;
+        background-position: 5%;
+        border: none;
+        outline: none;
+        box-shadow: 1px 2px 2px 1px #d3d3d3;
+        height: 40px;
+        margin: 0 0 50px;
+        width: 33%;
+        background-color: white;
+        border-radius: 5px;
     }
+
+    input[type="text" i] {
+        padding: 1px 50px;
+    }
+
 }
