--- a/src/components/CountryCard/CountryCard.scss
+++ b/src/components/CountryCard/CountryCard.scss
@@ -9,6 +9,7 @@
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 1px 2px 2px 1px #d3d3d3;
+    max-width: 300px;
 
     .image {
         max-height: 150px;
