--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -1,42 +1,49 @@
 .countries-grid {
   padding: 50px 7%;
+}
 
-  .country-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 50px;
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
 
-    .country-card {
-      background-color: #fff;
-      border-radius: 10px;
-      overflow: hidden;
+.country-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 50px;
+
+  .country-card {
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 1px 2px 2px 1px #d3d3d3;
+    max-width: 300px;
+    margin: auto;
+    width: 100%;
+
+    .image {
+      max-height: 150px;
       box-shadow: 1px 2px 2px 1px #d3d3d3;
-      max-width: 300px;
 
-      .image {
-        max-height: 150px;
-        box-shadow: 1px 2px 2px 1px #d3d3d3;
+      img {
+        width: 100%;
+        height: auto;
+        height: 150px;
+      }
+    }
 
-        img {
-          width: 100%;
-          height: auto;
-          height: 150px;
-        }
+    .content {
+      padding: 5px 30px 15px;
+      max-height: 150px;
+
+      h2 {
+        font-size: 18px;
+        margin: 15px 0;
       }
 
-      .content {
-        padding: 5px 30px 15px;
-        max-height: 150px;
-
-        h2 {
-          font-size: 18px;
-          margin: 15px 0;
-        }
-
-        p {
-          font-size: 12px;
-          margin: 0;
-        }
+      p {
+        font-size: 12px;
+        margin: 0;
       }
     }
   }
