--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -17,7 +17,6 @@
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 1px 2px 2px 1px #d3d3d3;
-    max-width: 300px;
     margin: auto;
     width: 100%;
 
@@ -58,6 +57,9 @@
 @media all and (max-width: 786px) {
   .country-grid {
     grid-template-columns: 1fr 1fr;
+  }
+  .flex {
+    display: block;
   }
 }
 
