--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,19 +1,47 @@
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  height: 80px;
+  padding: 0 7%;
+  box-shadow: 1px 2px 2px 1px #d3d3d3;
+  position: relative;
+
+  h1 {
     display: flex;
-    justify-content: space-between;
-    background-color: white;
-    height: 80px;
-    padding: 0 7%;
-    box-shadow: 1px 2px 2px 1px #d3d3d3;
-    position: relative;
-
-    h1 {
-        display: flex;
     align-items: center;
-    }
+  }
 
-    p {
-        display: flex;
-        align-items: center;
+  p {
+    display: flex;
+    align-items: center;
+  }
+
+  .toggle-mode {
+    display: flex;
+
+    button {
+      border: none;
+      background: white;
+      cursor: pointer;
+
+      svg {
+        margin: -2px 10px;
+      }
+
+      span {
+        font-size: 16px;
+      }
     }
+  }
+}
+
+@media all and (max-width: 500px) {
+  .toggle-mode p {
+    display: none;
+  }
+
+  .navbar h1 {
+    font-size: 26px;
+  }
 }
