--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,10 @@ body {
     background-color: #242424;
     color: white;
 
+    a {
+      color: white;
+    }
+
     button {
       background-color: #242424;
       color: white;
