--- a/src/components/Countries/Countries.scss
+++ b/src/components/Countries/Countries.scss
@@ -7,42 +7,56 @@
   justify-content: space-between;
 }
 
+.loader-text {
+  font-size: 85px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .country-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 50px;
 
-  .country-card {
-    background-color: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 1px 2px 2px 1px #d3d3d3;
-    margin: auto;
-    width: 100%;
+  a {
+    text-decoration: none;
+    color: #242424;
 
-    .image {
-      max-height: 150px;
+    .country-card {
+      background-color: #fff;
+      border-radius: 10px;
+      overflow: hidden;
       box-shadow: 1px 2px 2px 1px #d3d3d3;
+      margin: auto;
+      width: 100%;
+      max-width: 300px;
 
-      img {
-        width: 100%;
-        height: auto;
-        height: 150px;
-      }
-    }
+      .image {
+        max-height: 150px;
+        box-shadow: 1px 2px 2px 1px #d3d3d3;
 
-    .content {
-      padding: 5px 30px 15px;
-      max-height: 150px;
-
-      h2 {
-        font-size: 18px;
-        margin: 15px 0;
+        img {
+          width: 100%;
+          height: auto;
+          height: 150px;
+        }
       }
 
-      p {
-        font-size: 12px;
-        margin: 0;
+      .content {
+        padding: 5px 30px 15px;
+        max-height: 150px;
+
+        h2 {
+          font-size: 18px;
+          margin: 15px 0;
+        }
+
+        p {
+          font-size: 12px;
+          margin: 0;
+        }
       }
     }
   }
